--- a/README
+++ b/README
@@ -1,40 +1,50 @@
-#  Introduction
+# Moodify
 
-Moodify allows users to type how they feel and generates a matching playlist. It uses **OpenAI** for mood analysis and the **Spotify Web API** to deliver music recommendations. Firebase handles authentication and playlist saving.
+*A web app that turns your feelings into Spotify playlists.*
 
----
-
-# Features 
-
-- Display Spotify user profile picture in the navbar
-- Show user playlists in a searchable sidebar
-- Navigate playlists and view details
-- Logout functionality clears auth token and redirects
-- Stores user data and playlists using Firebase Realtime Database / Firestore
+<p align="center">
+  <img src="https://i.imgur.com/yourbanner1.png" alt="Moodify Banner" width="800"/>
+  <img src="https://i.imgur.com/yourbanner2.png" alt="Moodify UI" width="800"/>
+</p>
 
 ---
 
-# Tech Stack
+## Introduction
 
-- React
-- Vite
-- Tailwind CSS
+Moodify allows users to type how they feel and generates a matching playlist. It leverages OpenAI for mood analysis and the Spotify Web API for music recommendations. Firebase is used for authentication and data storage.
+
+---
+
+## Features
+
+- Display the Spotify user's profile picture in the navigation bar
+- View and search through user playlists in a collapsible sidebar
+- Navigate playlists and view track details
+- Logout function clears the authentication token and redirects to login
+- Store user data and playlists with Firebase Realtime Database or Firestore
+
+---
+
+## Tech Stack
+
+- React with Vite
+- Tailwind CSS for styling
 - Spotify Web API
-- Firebase (Realtime Database / Firestore)
+- Firebase (Realtime Database or Firestore)
 
 ---
 
-# Getting Started
+## Getting Started
 
-# Prerequisites
+### Prerequisites
 
 - Node.js and npm installed
-- Spotify Developer Account & registered app
-- Spotify OAuth token with scopes:  
+- Spotify Developer account with a registered app
+- Spotify OAuth token with the following scopes:  
   `playlist-read-private`, `user-read-email`, `user-read-private`
 - Firebase project with Realtime Database or Firestore configured
 
-# Installation
+### Installation
 
 1. Clone the repository:
 
@@ -43,15 +53,15 @@ Moodify allows users to type how they feel and generates a matching playlist. It
     cd moodify
     ```
 
-2. Install dependencies:
+2. Install the dependencies:
 
     ```bash
     npm install
     ```
 
-3. Create a `.env` file in the root and add your Spotify tokens and Firebase configuration variables:
+3. Create a `.env` file in the root directory and add your Spotify and Firebase credentials:
 
-    ```
+    ```env
     VITE_SPOTIFY_CLIENT_ID=your_spotify_client_id
     VITE_SPOTIFY_CLIENT_SECRET=your_spotify_client_secret
     VITE_FIREBASE_API_KEY=your_firebase_api_key
@@ -62,7 +72,7 @@ Moodify allows users to type how they feel and generates a matching playlist. It
     VITE_FIREBASE_APP_ID=your_firebase_app_id
     ```
 
-4. Add your Firebase secret key and initialize Firebase in `src/firebase.js`:
+4. Initialize Firebase in `src/firebase.js`:
 
     ```js
     // src/firebase.js
@@ -82,9 +92,9 @@ Moodify allows users to type how they feel and generates a matching playlist. It
     export const database = getDatabase(app); // or export const db = getFirestore(app);
     ```
 
-5. Configure your Spotify auth backend as needed to support OAuth and token exchange.
+5. Set up your backend to handle Spotify OAuth and token exchange.
 
-6. Start the development server:
+6. Run the development server:
 
     ```bash
     npm run dev
@@ -92,9 +102,9 @@ Moodify allows users to type how they feel and generates a matching playlist. It
 
 ---
 
-# Usage
+## Usage
 
 - Log in with your Spotify account
-- Browse your playlists on the sidebar
-- Generate or modify playlists based on mood or other filters
-- Data is saved and synced with Firebase for persistence
+- View your playlists in the sidebar
+- Generate new playlists or modify existing ones based on mood or keywords
+- All changes are saved and synced via Firebase
